# content-publishing-service

./: .gitignore  README.md  docker-compose.yml
auth-sdk/: LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg
auth-sdk/auth_sdk/: authentication.py  middleware.py  permissions.py  settings.py
content-service/: Dockerfile  README.md  manage.py  requirements.txt
content-service/book/: models.py  serializers.py  urls.py  views.py
content-service/book/management/commands/: upload_csv.py
content-service/book/migrations/: 0001_initial.py  0002_alter_book_author.py
content-service/content_service/: asgi.py  internal_api.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  config.conf
ngnix-conf/: Dockerfile  api_gateway.conf
user-interaction-service/: Dockerfile  manage.py  requirements.txt
user-interaction-service/interactions/: admin.py  models.py  serializers.py  urls.py  views.py
user-interaction-service/interactions/migrations/: 0001_initial.py
user-interaction-service/user_interaction_service/: asgi.py  settings.py  urls.py  wsgi.py
user-service/: Dockerfile  requirements.txt
user-service/user/: models.py  permissions.py  serializers.py  urls.py  views.py
user-service/user/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff_user_is_verified.py  0003_alter_user_is_active_alter_user_is_verified.py
user-service/user_service/: asgi.py  settings.py  token.py  urls.py  wsgi.py
