[metadata]
	name = auth-sdk
	version = 0.0.1
	description = sdk to communicate between user service and other services
	long_description = file:README.rst
	url = https://github.com/Abhra303/pr-assign/tree/main/auth-sdk
	license = MIT
	classifiers =
		Environment :: Web Environment
		Intended Audience :: Developers
		License :: OSI Approved :: MIT License
		Operating System :: OS Independent
		Programming Language :: Python :: 3 :: Only
		Programming Language :: Python :: 3.7
		Topic :: Software Development :: Libraries :: Python Modules

[options]
	include_package_data = true
	python_requires = >=3.6
	setup_requires =
		setuptools >= 66.0.0
install_requires =
	Django>=4.1.5
	djangorestframework>=3.14.0
	requests>=2.28.2
